<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.RegisterActivity">
    
    <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/black"
    />

    <TextView android:layout_width="wrap_content"
              android:id="@+id/tvNewAccount"
              android:text="@string/new_account"
              android:textSize="24sp"
              android:fontFamily="@font/poppins_bold"
              android:textColor="@color/black"
              app:layout_constraintTop_toBottomOf="@id/backButton"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp"
              android:layout_marginTop="36dp"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tvNewAccount"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp"
              android:textColor="@color/grey"
              android:textSize="14sp"
              android:id="@+id/tvData"
              android:fontFamily="@font/poppins"
              android:text="@string/input_your_data"
              android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintVertical_bias="1.0"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/textViewLogin"
            app:layout_constraintStart_toEndOf="@id/textViewLogin"
            app:layout_constraintTop_toTopOf="@id/textViewLogin"
    />

    <TextView android:layout_width="wrap_content"
              android:id="@+id/tvUsername"
              android:text="@string/input_username"
              android:textSize="14sp"
              android:fontFamily="@font/poppins"
              android:textColor="@color/black"
              app:layout_constraintTop_toBottomOf="@id/tvData"
              android:layout_marginTop="60dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp"
              android:layout_height="wrap_content"/>

    <com.pmsk.pemasokita.customview.EditTextName
            android:layout_width="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:id="@+id/edit_username"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/tvUsername"
            app:layout_constraintStart_toStartOf="@id/tvUsername"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            android:background="@drawable/edit_text_border"
            android:layout_marginHorizontal="24dp"
            android:layout_height="50dp"/>

    <TextView android:layout_width="wrap_content"
              android:text="@string/email"
              android:fontFamily="@font/poppins"
              android:textSize="14sp"
              android:layout_marginStart="24dp"
              android:textColor="@color/black"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/textView3"
              app:layout_constraintTop_toBottomOf="@id/edit_username"
              android:layout_marginTop="12dp"/>
    <com.pmsk.pemasokita.customview.EdittextEmail
            android:layout_marginTop="12dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_border"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/edit_email"/>
    <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_goneMarginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewpassword"
            android:layout_marginStart="24dp"/>
    <com.pmsk.pemasokita.customview.EdittextPassword
            android:layout_marginHorizontal="24dp"
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewpassword"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_goneMarginTop="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
    />

    <Button
            android:id="@+id/btn_create_account"
            android:text="@string/create_account"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/edit_password"
            app:layout_constraintEnd_toEndOf="@id/edit_password"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            android:layout_height="wrap_content"
            android:layout_width="0dp"/>

    <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:id="@+id/btn_login_with_google"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="36dp"
            android:drawableLeft="@drawable/ic_google"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:text="@string/continue_with_google"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
            app:layout_constraintEnd_toEndOf="@+id/btn_create_account"
            app:layout_constraintStart_toStartOf="@+id/btn_create_account"/>

    <ProgressBar
            android:id="@+id/loading"
            android:indeterminateTint="@color/primary"
            android:layout_width="wrap_content"
            android:outlineSpotShadowColor="@color/primary"
            android:outlineAmbientShadowColor="@color/grey"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>