<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginScreenActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/imageView2" tools:ignore="ContentDescription"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp" android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:paddingLeft="24dp"
            android:layout_marginTop="56dp"
            android:paddingRight="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:id="@+id/textView2"/>

    <TextView android:layout_width="wrap_content"
              android:text="@string/email"
              android:fontFamily="@font/poppins"
              android:textSize="14sp"
              android:layout_marginStart="24dp"
              android:textColor="@color/black"
              android:layout_marginTop="24dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView2"
              android:id="@+id/textView3"/>

    <com.pmsk.pemasokita.customview.EdittextEmail
            android:layout_marginTop="12dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/edit_email"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edit_text_border"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewpassword"
        />
    
    <com.pmsk.pemasokita.customview.EdittextPassword
            android:layout_marginHorizontal="24dp"
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewpassword"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_goneMarginTop="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            />

    <Button
            android:id="@+id/btn_sign_in"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/edit_password"
            app:layout_constraintEnd_toEndOf="@id/edit_password"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            android:layout_height="wrap_content"
            android:layout_width="0dp"/>

    <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:id="@+id/btn_login_with_google"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:drawableLeft="@drawable/ic_google"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:text="@string/login_google"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in"/>


    <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintVertical_bias="1.0"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_register"
            android:text="@string/register"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/textViewRegister"
            app:layout_constraintStart_toEndOf="@id/textViewRegister"
            app:layout_constraintTop_toTopOf="@id/textViewRegister"
    />

    <ProgressBar
            android:id="@+id/loading"
            android:indeterminateTint="@color/primary"
            android:layout_width="wrap_content"
            android:outlineSpotShadowColor="@color/primary"
            android:outlineAmbientShadowColor="@color/grey"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    




</androidx.constraintlayout.widget.ConstraintLayout>