<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.board.PaymentSuccessActivity">

    <ImageView android:layout_width="wrap_content"
               android:src="@drawable/coffeedoodle"
               android:id="@+id/ivCoffeeDoodle"
               android:layout_height="wrap_content"
               android:layout_marginTop="80dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintHorizontal_bias="0.495" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.051"/>
    <TextView android:layout_width="match_parent"
              android:id="@+id/tvOops"
              app:layout_constraintTop_toBottomOf="@id/ivCoffeeDoodle"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/successful_payment"
              android:textSize="24sp"
              android:textColor="@color/black"
              android:layout_marginTop="36dp"
              android:fontFamily="@font/poppins_bold"
              android:textAlignment="center"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:id="@+id/tv_descEmptyCart"
              app:layout_constraintTop_toBottomOf="@id/tvOops"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/desc_successful_payment"
              android:layout_marginTop="22dp"
              android:textAlignment="center"
              android:textSize="14sp"
              android:textColor="@color/black"
              android:fontFamily="@font/poppins"
              android:paddingHorizontal="24dp"
              android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_back"
            android:text="@string/back"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_descEmptyCart"
            android:layout_height="wrap_content"
            android:layout_width="0dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>