<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.board.EmptyCartActivity">

    <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
                                                     app:layout_constraintTop_toTopOf="parent"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     app:flow_verticalAlign="center"
                                                     android:background="@null"
                                                     android:elevation="0dp"
                                                     app:flow_horizontalAlign="center"
                                                     android:layout_height="wrap_content"
                                                     android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:background="@null"
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/belanjaan"
                      android:textSize="24sp"
                      android:textColor="@color/black"
                      android:fontFamily="@font/poppins_bold"
                      android:textAlignment="center"
                      android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView android:layout_width="wrap_content"
               android:src="@drawable/doodle2"
               android:id="@+id/ivDoodle2"
               android:layout_height="wrap_content"
               android:layout_marginTop="80dp"
               app:layout_constraintTop_toBottomOf="@+id/appBarLayout" app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:layout_width="match_parent"
              android:id="@+id/tvOops"
              app:layout_constraintTop_toBottomOf="@id/ivDoodle2"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/oops"
              android:textSize="24sp"
              android:textColor="@color/black"
              android:layout_marginTop="36dp"
              android:fontFamily="@font/poppins_bold"
              android:textAlignment="center"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:id="@+id/tv_descEmptyCart"
              app:layout_constraintTop_toBottomOf="@id/tvOops"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/emptyCartDesc"
              android:layout_marginTop="22dp"
              android:textSize="14sp"
              android:textColor="@color/black"
              android:fontFamily="@font/poppins"
              android:paddingHorizontal="24dp"
              android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_back"
            android:text="@string/back"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_descEmptyCart"
            android:layout_height="wrap_content"
            android:layout_width="0dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>