<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.board.RegisterSuccessActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView2" tools:ignore="ContentDescription"/>

    <ImageView android:layout_width="wrap_content"
               android:src="@drawable/selfiedoodle"
               android:id="@+id/imageViewDoodle"
               app:layout_constraintTop_toBottomOf="@id/imageView2"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="80dp"
               android:layout_height="wrap_content"/>
    
    <TextView android:layout_width="match_parent"
              android:layout_marginTop="20dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/imageViewDoodle"
              android:text="@string/create_success"
              android:fontFamily="@font/poppins_bold"
              android:textSize="24sp"
              android:layout_marginHorizontal="24dp"
              android:textAlignment="center"
              android:id="@+id/textViewSuccess"
              android:textColor="@color/black"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:layout_marginTop="16dp"
              android:id="@+id/textViewLabel"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/textViewSuccess"
              android:text="@string/desc_success"
              android:fontFamily="@font/poppins"
              android:textSize="20sp"
              android:layout_marginHorizontal="24dp"
              android:textAlignment="center"
              android:textColor="@color/black"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btn_explore"
            android:text="@string/explore"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="@id/textViewLabel"
            app:layout_constraintEnd_toEndOf="@id/textViewLabel"
            android:layout_height="wrap_content"
            android:layout_width="0dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>